@@ -1,6 +1,10 @@
 # Remember to also add subdirs in configure.in
+if HAVE_XSLT
 SUBDIRS = cgm pstricks hpgl wpg svg shape dxf python xfig wmf metapost xslt \
  pixbuf
+else
+SUBDIRS = cgm pstricks hpgl wpg svg shape dxf python xfig wmf metapost pixbuf
+endif
 
 EXTRA_DIST = \
 	makefile.msc objects.def
