@@ -1,3 +1,12 @@
+2003-04-24  Lars Clausen  <lrclause@cs.uiuc.edu>
+
+	* plug-ins/Makefile.am: 
+	* plug-ins/xslt/Makefile.am: 
+	* plug-ins/xslt/xslt.c (dia_plugin_init): 
+	Patch from Götz Waschk <waschk@informatik.uni-rostock.de> uses
+	automake-style if to only include xslt dir when needed.  Works
+	with automake 1.4 and up, at least.
+
 2003-04-22  Lars Clausen  <lrclause@cs.uiuc.edu>
 
 	* lib/diasvgrenderer.c (draw_string): 
